--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -12,3 +12,12 @@
   --color-notion-800: #1e1a29;
   --color-notion-900: #17141f;
 }
+
+@layer utilities {
+  .region-drag {
+    -webkit-app-region: drag;
+  }
+  .region-no-drag {
+    -webkit-app-region: no-drag;
+  }
+}
